[project]
name = "seokxkyu_history"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Seokxkyu", email = "kyuseok000@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
seokxkyu-history = "seokxkyu_history.cli:cnt"
mh = "seokxkyu_history.cli:argp"

[tool.pdm]
distribution = false
